--- a/output/index.html
+++ b/output/index.html
@@ -21,12 +21,13 @@ body {
 }
 
     </style>
+    <!-- fin de styles -->
 </head>
 <body>
     
   <!-- INICIO DE CONTENIDO -->
   <section id="ihoh">
-    <video class="streaming" id="streaming" muted src="https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8" loop="loop" autoplay="autoplay">
+    <video class="streaming" id="streaming" muted src="../public/assets/Mega.mp4" loop="loop" autoplay="autoplay">
     </video>
   </section>
 <!-- FIN DE CONTENIDO -->
