corrections, export, no anim added

--- a/output/index.html
+++ b/output/index.html
@@ -4,32 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- HLS -->
     <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
+    <!-- ANIMACIONES -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Test</title>
     <!-- styles -->
-    <style>
-* {
-  box-sizing: border-box;
-}
-body {
-  margin: 0;
-  padding: 0;
-}
-.streaming{
-  width:1920px;
-  height:1080px;
-}
 
-    </style>
     <!-- fin de styles -->
 </head>
 <body>
     
   <!-- INICIO DE CONTENIDO -->
-  <section id="ihoh">
-    <video class="streaming" id="streaming" muted src="../public/assets/Mega.mp4" loop="loop" autoplay="autoplay">
-    </video>
-  </section>
+
+
 <!-- FIN DE CONTENIDO -->
     <script>
         var video = document.getElementById('streaming');
